# rust-video-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPERS_LOG.md  README.md
src/: LICENSE  browser.rs  cli.rs  error.rs  http.rs  lib.rs  logging.rs  main.rs
